# SparseIntCones

./: CMakeLists.txt  README.txt  main.cpp
SparseCones/: CMakeLists.txt  CommonFunction.cpp  CommonFunction.h  General_Struct.cpp  General_Struct.h  IntCones.cpp  IntCones.h  MeshCache.cpp  MeshCache.h  MeshCut.cpp  MeshCut.h  Opt.cpp  Opt.h  ProjectionCones.cpp  ProjectionCones.h  Prune.cpp  Prune.h  QEMSimplification.cpp  QEMSimplification.h
SparseCones/Mesh/: MeshData.cpp  MeshData.h  MeshDefinition.cpp  MeshDefinition.h
SparseCones/ShortestPath/: Auxiliary.cpp  Auxiliary.h  MinimalSpanningTree.cpp  MinimalSpanningTree.h  ShortestPath.h
SparseCones/Simplifier/: CMakeLists.txt
SparseCones/Simplifier/GCLF-Geometry/: CMakeLists.txt
SparseCones/Simplifier/GCLF-Geometry/AABB/: AABBClosestSearch.cpp  AABBClosestSearch.h  AABBTraits.h
SparseCones/Simplifier/GCLF-Geometry/Basic/: BoundingBox.cpp  BoundingBox.h  BoundingBox3i.h  SimpleTypes.h  Vector2d.h  Vector3d.h  Vector3i.h
SparseCones/Simplifier/GCLF-Geometry/DynamicAABB/: DAABBNode.h  DAABBTree.h  DAABBTree_impl.h
SparseCones/Simplifier/GCLF-Geometry/Exact/: CGALTypes.h  ExactPoint.cpp  ExactPoint.h  ExactTriangle.h  ExactTriangle_impl.h  Predicates.cpp  Predicates.h  TriSegIntersect.cpp  TriSegIntersect.h  TriTriIntersect.cpp  TriTriIntersect.h
SparseCones/Simplifier/GCLF-Geometry/GeometryMath/: GeometryMath.cpp  GeometryMath.h
SparseCones/Simplifier/GCLF-Geometry/Grid/: StaticUniformGrid.h  StaticUniformGrid_impl.h
SparseCones/Simplifier/GCLF-Geometry/KdTree/: KdTree.cpp  KdTree.h
SparseCones/Simplifier/GCLF-Simplification/: CMakeLists.txt  GCLF_Simplification_Config.h  config.json  interface.h
SparseCones/Simplifier/GCLF-Simplification/DE/: DEDM.cpp  DEDM.h  DERemesher.cpp  DERemesher.h  DESimplifier.cpp  DESimplifier.h
SparseCones/Simplifier/GCLF-Simplification/Mesh/: MeshCluster.cpp  MeshCluster.h  MeshConnectRegion.h  MeshConnnectRegion.cpp  MeshCurvature.cpp  MeshCurvature.h  SurfaceMeshDefinition.cpp  SurfaceMeshDefinition.h
SparseCones/Simplifier/GCLF-Simplification/Simplifier/Geom/: GeometryCheck.cpp  GeometryCheck.h  SurfaceDelaunay.cpp  SurfaceDelaunay.h
SparseCones/Simplifier/GCLF-Simplification/Simplifier/SpaceSearch/: DFaceTree.cpp  DFaceTree.h  FaceGrid.cpp  FaceGrid.h  FaceTree.cpp  FaceTree.h  VertexTree.cpp  VertexTree.h
SparseCones/Simplifier/GCLF-Simplification/Simplifier/Topo/: EdgeCollapser.cpp  EdgeCollapser.h  EdgeFlipper.cpp  EdgeFlipper.h  EdgeSplitter.cpp  EdgeSplitter.h  TopoOperations.cpp  TopoOperations.h  VertexRelocater.cpp  VertexRelocater.h
SparseCones/Simplifier/GCLF-Simplification/Utils/: ColorMap.cpp  ColorMap.h
SparseCones/Simplifier/GCLF-ThirdPartyLibs/: CMakeLists.txt
SparseCones/Simplifier/GCLF-Utils/: CMakeLists.txt
SparseCones/Simplifier/GCLF-Utils/Logger/: Logger.h
