add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/IndirectPredicates)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/VolumeMesher)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/spdlog)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/OpenMesh)

set(CGAL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/CGAL PARENT_SCOPE)
set(OPENMESH_INCLUDE_DIRS ${OPENMESH_INCLUDE_DIRS} PARENT_SCOPE)
set(OPENMESH_LIBRARIES ${OPENMESH_LIBRARIES} PARENT_SCOPE)
set(EIGEN3_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/eigen-3.4.0 PARENT_SCOPE)
set(ENV{GMP_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/gmp)
set(ENV{MPFR_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/mpfr)